[package]
name = "dwarfdump"
version = "0.1.0"
license = "MIT"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
description = "A DWARF parser to extract function signatures and types from shared libraries"
keywords = ["DWARF", "debug", "elf", "signature", "shared"]

[dependencies]
fallible-iterator = "0.1.2"
gimli = "0.13.0"
object = "0.3.0"
# these are bin-dependencies, which lacks cargo support
getopts = "0.2"
memmap = "0.4.0"
